# StringLibrary

./: CMakeLists.txt  README.md  example  example.c  in_file.txt  out_file.txt  task_2.c
my_str/: CMakeLists.txt  lib_string.c  lib_string.h
